Sun Feb  4 03:54:22 2007  Tim Janik  <timj@gtk.org>

	* tests/:
	updated all licenses to GNU Lesser General Public License version 2.1.

Sun Feb  4 03:49:43 2007  Tim Janik  <timj@gtk.org>

	* tools/:
	updated all licenses to GNU Lesser General Public License version 2.1.

Sun Feb  4 03:46:42 2007  Tim Janik  <timj@gtk.org>

	* shell/: 
	updated all licenses to GNU Lesser General Public License version 2.1.

Sun Feb  4 03:42:30 2007  Tim Janik  <timj@gtk.org>

	* beast-gtk/: 
	updated all licenses to GNU Lesser General Public License version 2.1.

Sun Feb  4 03:35:58 2007  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/: 
	updated all licenses to GNU Lesser General Public License version 2.1.

Sun Feb  4 01:58:20 2007  Tim Janik  <timj@gtk.org>

	* Makefile.decl: provide SVN revision number in reports.

Fri Feb  2 01:44:53 2007  Tim Janik  <timj@gtk.org>

	* birnet/: Merged with http://birnet.org/git/birnet.git
	commit id 43e681d19203cad908c3118bbb21501f021fbeac.

Thu Feb  1 20:51:57 2007  Tim Janik  <timj@gtk.org>

	* birnet/: Merged with http://birnet.org/git/birnet.git
	commit id 8d5799e2fc064bfaf8439a6f7e15d8db0bdc45f3.

Tue Jan 30 00:56:10 2007  Tim Janik  <timj@gtk.org>

	* birnet/: Merged with http://birnet.org/git/birnet.git
	commit id b7275b0b32ccbb12d5fba5a1aa95d9a48352b239.

Sun Jan 28 01:12:18 2007  Tim Janik  <timj@gtk.org>

	* web/file-upload.php: only allow .bse or .ogg file uploads.

Thu Jan 25 00:05:52 2007  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/audio/Makefile.am:
	* tests/audio/xtalstringssong.*: Added a small song to test the
	DavXtalStrings module.

	* tests/audio/partymonster.ref: Regenerated reference features (since
	DavXtalStrings has now deterministic random). Since I needed to
	regenerate the features anyway, I choose to also use the new spectrum
	slice joining mode, to make the reference file small. This will make
	the comparisions less sensitive, though.

Tue Jan 23 02:08:24 2007  Tim Janik  <timj@gtk.org>
