@@ -1,3 +1,10 @@
+Mon Feb  5 01:02:53 2007  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* r+d-files/plotsignals.sh: Added a script which plots audio signals
+	with gnuplot to allow visual comparisions. This can for instance be
+	hepful to inspect the difference between a wav file that passes a
+	certain automatic audio test, and a version that doesn't.
+
 Sun Feb  4 03:54:22 2007  Tim Janik  <timj@gtk.org>
 
 	* tests/:
